# vcpkg_hslcrb-s_pkgs

./: CONTRIBUTING.md  README.md  test_math.cpp
Simplebrowse-src/: CMakeLists.txt
Simplebrowse-src/src/: main.c
ports/rasberrysoup/: portfile.cmake
ports/simplebrowse/: README.md  portfile.cmake  vcpkg.json
versions/: baseline.json
versions/s-/: simplebrowse.json
